codebox.css
* {
    margin: 0;
    padding: 0;
}
body {
    font-family: "Lucida Grande";
    font-size: 11px;
    font-variant: normal;
    overflow: hidden;
}
#files {
    position: absolute;
    width: 150px;
    height: 100%;
}
#files li {
    list-style-type: none;
    cursor: pointer;
    padding: 2px;
}
#files li.selected {
    color: white;
    background: black;
}
#editor {
    margin: 0 0 0 150px;
    width: 100%;
    height: 100%;
}
#notification {
    text-align: center;
    position: fixed;
    visibility: hidden;
    width: 200px;
    top: 0;
    left: 50%;
    margin-left: -100px;
    background: rgb(163, 26, 20);
    color: white;
    border-radius: 5px;
    border-color: solid rgb(163, 26, 20);
    border: 1px;
}

